--- a/platformio.ini
+++ b/platformio.ini
@@ -52,33 +52,16 @@ lib_deps = EEPROM, FlexCAN_T4, SD, Time
 ;board = lptm4c1294ncpdt
 ;lib_deps = EEPROM
 
-[env:genericSTM32F103RB]
-platform = ststm32@~4.5.0
-framework = arduino
-board = genericSTM32F103RB
-lib_deps = EEPROM, stm32duino/STM32duino RTC
-build_flags = -fpermissive -std=gnu++11 -DCORE_STM32_OFFICIAL
-
-[env:genericSTM32F103RB_STM32GENERIC]
-;platform = ststm32@~4.5.0
-platform = ststm32
-framework = arduino
-; framework-arduinoststm32
-board = genericSTM32F103RB, stm32duino/STM32duino RTC
-lib_deps = EEPROM, HardwareTimer, Flash_STM32
-build_flags = -fpermissive -std=gnu++11 -UBOARD_MAX_IO_PINS -DUSE_STM32GENERIC -DMENU_USB_SERIAL
-
 ;STM32 Official core
 [env:black_F407VE]
 platform = ststm32
 ;platform = https://github.com/platformio/platform-ststm32.git
 framework = arduino
-;board = genericSTM32F407VET6
 board = black_f407ve
 lib_deps = stm32duino/STM32duino RTC
 board_build.core = stm32
-build_flags = -std=gnu++11 -UBOARD_MAX_IO_PINS -DENABLE_HWSERIAL2 -DENABLE_HWSERIAL3 -DUSBCON -DHAL_PCD_MODULE_ENABLED -DUSBD_USE_CDC
-upload_protocol = dfu
+build_flags = -std=gnu++11 -DENABLE_HWSERIAL2 -DENABLE_HWSERIAL3 -DUSBCON -DHAL_PCD_MODULE_ENABLED -DUSBD_USE_CDC
+upload_protocol = stlink
 debug_tool = stlink
 monitor_speed = 115200
 
@@ -97,7 +80,6 @@ monitor_speed = 115200
 [env:bluepill_f103c8]
 platform = ststm32
 framework = arduino
-; framework-arduinoststm32
 board = bluepill_f103c8_128k
 lib_deps = EEPROM, stm32duino/STM32duino RTC
 ;build_flags = -fpermissive -std=gnu++11 -Os -ffunction-sections -fdata-sections -Wl,--gc-sections -Wl,-Map,output.map
@@ -112,15 +94,6 @@ board = zeroUSB
 build_flags = -fpermissive -std=gnu++11
 upload_protocol = sam-ba
 
-
-;Support for the stm32f407 doesn't look ready in platformio yet
-;[env:genericSTM32F407VE]
-;platform = https://github.com/maichaell/platform-ststm32
-;framework = arduino
-;board = disco_f407vg
-;lib_deps = EEPROM
-;build_flags = -fpermissive -std=gnu++11 -DUSE_STM32GENERIC -DMENU_USB_SERIAL
-
 [env:custom_monitor_speedrate]
 monitor_speed = 115200
 
@@ -132,8 +105,5 @@ default_envs = megaatmega2560
 ;default_envs = teensy35
 ;default_envs = teensy40
 ;env_default = LaunchPad_tm4c1294ncpdt
-;env_default = genericSTM32F103RB
-;env_default = bluepill_f103c8
 ;env_default = black_F401CC
-
 
