--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -652,8 +652,8 @@ page = 6
       iacCrankBins = array, U08,      112, [4],        "F",        1.8,    -22.23,    -40,    215,      0
   #endif
 
-      iacAlgorithm = bits , U08,      116, [0:2],      "None", "On/Off", "PWM Open loop", "PWM Closed loop", "Stepper Open Loop", "Stepper Closed Loop", "PWM Closed+Open loop", "INVALID"
-      iacStepTime  = bits , U08,      116, [3:5],      "INVALID","1", "2", "3", "4", "5", "6","INVALID"
+      iacAlgorithm = bits , U08,      116, [0:2],      "None", "On/Off", "PWM Open loop", "PWM Closed loop", "Stepper Open Loop", "Stepper Closed Loop", "PWM Closed+Open loop", "Stepper Closed+Open loop"
+      iacStepTime  = bits , U08,      116, [3:5],      "1.0", "1.71", "2.43", "3.14", "3.86", "4.57", "5.29", "6.0"
       iacChannels  = bits,  U08,      116, [6:6],      "1", "2"
       iacPWMdir    = bits , U08,      116, [7:7],      "Normal", "Reverse"
 
@@ -965,7 +965,7 @@ page = 9
       Auxin15pinb       = bits,   U08,    152,     [0:5],  $DIGITAL_PIN
 
       iacStepperInv       = bits,   U08,   153, [0:0], "No",        "Yes"
-      iacCoolTime         = bits,   U08,   153, [1:3], "0", "1", "2", "3", "4", "5", "6","INVALID"
+      iacCoolTime         = bits,   U08,   153, [1:3], "1.0", "1.71", "2.43", "3.14", "3.86", "4.57", "5.29", "6.0"
       blankfield          = bits,   U08,   153, [4:4], "",""
 
       unused10_153        = bits,   U08,   153, [5:7], ""
@@ -1617,13 +1617,13 @@ menuDialog = main
         subMenu = ASE,                  "Afterstart Enrichment (ASE)"
         subMenu = std_separator
         subMenu = idleSettings,         "Idle Control"
-        subMenu = iacClosedLoop_curve,  "Idle - RPM targets", 7, { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || idleAdvEnabled >= 1 }
+        subMenu = iacClosedLoop_curve,  "Idle - RPM targets", 7, { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 || idleAdvEnabled >= 1 }
         subMenu = iacPwm_curve,         "Idle - PWM Duty Cycle", 7, { iacAlgorithm == 2 || iacAlgorithm == 6}
         subMenu = iacPwmCrank_curve,    "Idle - PWM Cranking Duty Cycle", 7, { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 6}
-        subMenu = iacStep_curve,        "Idle - Stepper Motor", 7, { iacAlgorithm == 4  }
-        subMenu = iacStepCrank_curve,   "Idle - Stepper Motor Cranking", 7, { iacAlgorithm == 4 || iacAlgorithm == 5 }
+        subMenu = iacStep_curve,        "Idle - Stepper Motor", 7, { iacAlgorithm == 4 || iacAlgorithm == 7 }
+        subMenu = iacStepCrank_curve,   "Idle - Stepper Motor Cranking", 7, { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
         subMenu = std_separator
-        subMenu = idleUpSettings,       "Idle Up Settings", { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 6 }
+        subMenu = idleUpSettings,       "Idle Up Settings", { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 }
         subMenu = std_separator
         subMenu = idleAdvanceSettings,  "Idle Advance Settings"
 
@@ -2346,12 +2346,12 @@ menuDialog = main
       field = "Fan hysteresis",             fanHyster,          { fanEnable }
 
     dialog = stepper_idle, "Stepper Idle"
-      field = "Step time (ms)",       iacStepTime,              { iacAlgorithm == 4 || iacAlgorithm == 5 }
-      field = "Cool time (ms)",       iacCoolTime,              { iacAlgorithm == 4 || iacAlgorithm == 5 }
-      field = "Home steps",           iacStepHome,              { iacAlgorithm == 4 || iacAlgorithm == 5 }
-      field = "Minimum Steps",        iacStepHyster,            { iacAlgorithm == 4 || iacAlgorithm == 5 }
-      field = "Don't exceed",         iacMaxSteps,              { iacAlgorithm == 4 || iacAlgorithm == 5 } 
-      field = "Stepper Inverted",     iacStepperInv,            { iacAlgorithm == 4 || iacAlgorithm == 5 }
+      field = "Step time (ms)",       iacStepTime,              { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
+      field = "Cool time (ms)",       iacCoolTime,              { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
+      field = "Home steps",           iacStepHome,              { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
+      field = "Minimum Steps",        iacStepHyster,            { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
+      field = "Don't exceed",         iacMaxSteps,              { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
+      field = "Stepper Inverted",     iacStepperInv,            { iacAlgorithm == 4 || iacAlgorithm == 5 || iacAlgorithm == 7 }
 
     dialog = pwm_idle, "PWM Idle"
       field = "Number of outputs",    iacChannels,              { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 6 }
@@ -2360,18 +2360,19 @@ menuDialog = main
       field = "Run before start",     iacPWMrun,                { iacAlgorithm == 2 || iacAlgorithm == 3 || iacAlgorithm == 6 }
 
     dialog = closedloop_idle, "Closed loop Idle"
-      field = "P",                    idleKP,                   { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6}
-      field = "I",                    idleKI,                   { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6}
-      field = "D",                    idleKD,                   { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6}
-      field = "Minimum valve duty",   iacCLminDuty,             { iacAlgorithm == 3 || iacAlgorithm == 6}
-      field = "Maximum valve duty",   iacCLmaxDuty,             { iacAlgorithm == 3 || iacAlgorithm == 6}
-      field = "Integeral reset above TPS",     iacTPSlimit,     { iacAlgorithm == 6 }
-      field = "Integeral reset RPM Hysteresis", iacRPMlimitHysteresis, { iacAlgorithm == 6 }
+      displayOnlyField = "#                      !!! Please note that 1.0 means 100% !!!"
+      field = "P",                    idleKP,                   { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 }
+      field = "I",                    idleKI,                   { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 }
+      field = "D",                    idleKD,                   { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 }
+      field = "Minimum valve duty",   iacCLminDuty,             { iacAlgorithm == 3 || iacAlgorithm == 6 }
+      field = "Maximum valve duty",   iacCLmaxDuty,             { iacAlgorithm == 3 || iacAlgorithm == 6 }
+      field = "Integeral reset above TPS",     iacTPSlimit,     { iacAlgorithm == 6 || iacAlgorithm == 7 }
+      field = "Integeral reset RPM Hysteresis", iacRPMlimitHysteresis, { iacAlgorithm == 6 || iacAlgorithm == 7 }
 
     dialog = idleSettings, "Idle Settings"
       topicHelp = "https://wiki.speeduino.com/en/configuration/Idle"
       field = "Idle control type",    iacAlgorithm
-        field = "Crank to run taper", idleTaperTime,            { iacAlgorithm == 2 || iacAlgorithm == 4 }
+        field = "Crank to run taper", idleTaperTime,            { iacAlgorithm == 2 || iacAlgorithm == 4 || iacAlgorithm == 7 }
         field = "#Fast Idle"
         field = "Fast idle temp",     iacFastTemp,              { iacAlgorithm == 1 }
         panel = pwm_idle
@@ -2515,7 +2516,7 @@ menuDialog = main
         topicHelp = "https://wiki.speeduino.com/en/configuration/IdleAdvance"
         panel = idleAdvanceSettings_east
         panel = idle_advance_curve,         { idleAdvEnabled >= 1 }
-        panel = iacClosedLoop_curve,        { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || idleAdvEnabled >= 1 }
+        panel = iacClosedLoop_curve,        { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7|| idleAdvEnabled >= 1 }
         
 
     dialog = rotary_ignition,               "Rotary Ignition",  4
@@ -2764,6 +2765,7 @@ menuDialog = main
         field = "Adjust fuel timing",       vvtCLAlterFuelTiming
         field = "Cam angle @ 0% duty",      vvtCLMinAng
         field = ""
+        displayOnlyField = "#                      !!! Please note that 1.0 means 100% !!!"
         field = "Proportional Gain",        vvtCLKP
         field = "Integral Gain",            vvtCLKI
         field = "Differential Gain",        vvtCLKD
@@ -4859,8 +4861,8 @@ cmdVSSratio6 =      "E\x99\x06"
    entry = hardLimitOn ,    "Hard Limiter",     int,    "%d"
    entry = idleControlOn,   "Idle Control",     int,    "%d"
    entry = idleLoad,        "IAC value",        int,    "%d"
-   entry = CLIdleTarget,    "Idle Target RPM",  int,    "%%d",     { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || idleAdvEnabled >= 1 } ;Only show for closed loop idle modes and if idle advance is enabled
-   entry = CLIdleDelta,     "Idle RPM Delta",   int,    "%d",      { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || idleAdvEnabled >= 1 } ;Only show for closed loop idle modes and if idle advance is enabled
+   entry = CLIdleTarget,    "Idle Target RPM",  int,    "%%d",     { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 || idleAdvEnabled >= 1 } ;Only show for closed loop idle modes and if idle advance is enabled
+   entry = CLIdleDelta,     "Idle RPM Delta",   int,    "%d",      { iacAlgorithm == 3 || iacAlgorithm == 5 || iacAlgorithm == 6 || iacAlgorithm == 7 || idleAdvEnabled >= 1 } ;Only show for closed loop idle modes and if idle advance is enabled
    entry = baro,            "Baro Pressure",    int,    "%d"
    entry = nitrousOn,       "Nitrous",          int,    "%d",      { n2o_enable > 0 }
    entry = syncLossCounter, "Sync Loss #",      int,    "%d"
