Integrate code gen into PIO pre-build

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; http://docs.platformio.org/page/projectconf.html
 
+[env]
+extra_scripts = pre:./build/py_package_init.py, pre:./build/pre_build.py
+
 [env:megaatmega2560]
 platform=atmelavr
 board=megaatmega2560
