Respect INI reserved key variable names

--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -275,7 +275,7 @@ page = 1
 
       reqFuel       = scalar, U08,      24,        "ms",        0.1,       0.0,   0.0,    25.5,      1
       divider       = scalar, U08,      25,        "",          1.0,       0.0
-      injTiming     = bits,   U08,      26, [0:0], "Simultaneous", "Alternating"
+      alternate     = bits,   U08,      26, [0:0], "Simultaneous", "Alternating" ; Has to be called alternate for the req fuel calculator to work :(
       multiplyMAP_old   = bits,   U08,      26, [1:1], "No",       "Yes"
       includeAFR    = bits,   U08,      26, [2:2], "No",       "Yes"
       hardCutType   = bits,   U08,      26, [3:3], "Full",      "Rolling"
@@ -286,7 +286,7 @@ page = 1
 
       ; Config1
       mapSample     = bits,   U08,      36, [0:1], "Instantaneous", "Cycle Average", "Cycle Minimum", "Event Average"
-      strokes     = bits,   U08,      36, [2:2], "Four-stroke", "Two-stroke"
+      twoStroke     = bits,   U08,      36, [2:2], "Four-stroke", "Two-stroke" ; Has to be called twoStroke for the req fuel calculator to work :(
       injType       = bits,   U08,      36, [3:3], "Port", "Throttle Body"
       nCylinders    = bits,   U08,      36, [4:7], "INVALID","1","2","3","4","5","6","INVALID","8","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID","INVALID"
 
