--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -405,7 +405,8 @@ page = 1
 
       rtc_trim        = scalar,  S08,    123,               "ppm",      1, 0, -127, +127, 0
       idleAdvVss    = scalar, U08,      124,        "km/h",        1        0.0,    0.0,    255,       0 
-      unused2-95    = array,  U08,      125, [3],   "%",        1.0,       0.0,   0.0,     255,      0
+      idleUpRPMAdder   = scalar, U08,      125,        "Added Target RPM"  10.0,       0.0,   0.0,     250.0,    0
+      unused2-126    = array,  U08,      126, [2],   "%",        1.0,       0.0,   0.0,     255,      0
 
 ;Page 2 is the fuel map and axis bins only
 page = 2
@@ -2404,6 +2405,7 @@ menuDialog = main
         field = "Idle Up Pin",          	idleUpPin,              { idleUpEnabled }
         field = "Idle Up Pin Polarity", 	idleUpPolarity,         { idleUpEnabled }
         field = "Idle Up Amount",       	idleUpAdder,            { idleUpEnabled }
+        field = "Idle Up RPM Adder",        idleUpRPMAdder,         { idleUpEnabled }
 
     dialog = idleUpOutputSettingsPanel, "Idle Up Output Settings", yAxis
         field = "Idle Up Output Enabled", 	idleUpOutputEnabled,    { idleUpEnabled }
