--- a/reference/speeduino.ini
+++ b/reference/speeduino.ini
@@ -580,7 +580,8 @@ page = 6
   #endif
       egoCount                = scalar, U08,       5,             "",         4.0,    0.0,  4.0,  255.0,      0 ; * (  1 byte)
       vvtMode                 = bits,   U08,       6, [0:1],      "On/Off", "Open Loop", "Closed loop", "INVALID"
-      vvtLoadSource           = bits,   U08,       6, [2:3],      "MAP", "TPS", "INVALID", "INVALID"
+      vvtLoadSource           = bits,   U08,       6, [2:2],      "MAP", "TPS"
+      boostLoadSource         = bits,   U08,       6, [3:3],      "MAP", "TPS"
       vvtPWMdir               = bits,   U08,       6, [4:4],      "Advance", "Retard"
       vvtCLUseHold            = bits,   U08,       6, [5:5],      "No", "Yes"
       vvtCLAlterFuelTiming    = bits,   U08,       6, [6:6],      "No", "Yes"
@@ -695,7 +696,7 @@ page = 6
 page = 7
       boostTable    = array,  U08,    0,[8x8],    { bitStringValue( boostTableLabels, boostType ) },        2.0,        0.0,   0,       boostTableLimit,      0
       rpmBinsBoost  = array,  U08,    64,[  8],   "RPM",      100.0,      0.0,   100,     25500,      0
-      tpsBinsBoost  = array,  U08,    72,[  8],   "TPS",      1.0,        0.0,   0.0,     255.0,      0
+      loadBinsBoost  = array,  U08,    72,[  8],   { bitStringValue(algorithmUnits ,  boostLoadSource) },      1.0,        0.0,   0.0,     255.0,      0
       vvtTable      = array,  U08,    80,[8x8],    "%",        0.5,        0.0,   0,       100,      1
       rpmBinsVVT    = array,  U08,    144,[  8],   "RPM",      100.0,      0.0,   100,     25500,      0
       loadBinsVVT   = array,  U08,    152,[  8],   { bitStringValue(algorithmUnits ,  vvtLoadSource) },      1.0,        0.0,   0.0,     255.0,      0
@@ -1647,7 +1648,7 @@ menuDialog = main
         subMenu = vssSettings,          "VSS and Gear detection"
         subMenu = std_separator
         subMenu = boostSettings,        "Boost Control"
-        subMenu = boostLoad,             "Boost Targets/Load", 8,  { boostEnabled }
+        subMenu = boostTbl,             "Boost Targets/Load", 8,  { boostEnabled }
         subMenu = std_separator
         subMenu = vvtSettings,          "VVT Control"
         subMenu = vvtTbl,               "VVT duty cycle", 8,  { vvtEnabled }
@@ -2547,12 +2548,6 @@ menuDialog = main
         field = "Enable Boost limit",       boostCutEnabled
         field = "Boost Limit",              boostLimit,     { boostCutEnabled }
 
-    dialog = boostLoad, ""
-        field = "Mode",                     boostType
-        field = "In open loop mode, the values in this table are duty cycle %"
-        field = "In closed loop mode, the values are boost targets in kPa"
-        panel = boostTbl
-
     dialog = revLimiterDialog, "Rev Limiter"
         field = "Rev Limiter"
         field = "!Soft limiter only available with ignition cut", {}, {}, { engineProtectType == 2 }
@@ -2765,6 +2760,9 @@ menuDialog = main
         topicHelp = "https://wiki.speeduino.com/en/configuration/Boost_Control"
         field = "Boost Control Enabled",    boostEnabled
         field = "Boost control type",       boostType,          { boostEnabled }
+        field = "In open loop mode, the values are duty cycle %"
+        field = "In closed loop mode, the values are boost targets in kPa"
+        field = "Load source",            boostLoadSource,    { boostEnabled }
         field = "Boost output pin",         boostPin,           { boostEnabled }
         field = "Boost solenoid freq.",     boostFreq,          { boostEnabled }
 
@@ -4320,7 +4318,7 @@ cmdVSSratio6 =      "E\x99\x06"
       ;#endif
     table = boostTbl,    boostMap,  "Boost Duty / Target", 8
       xBins = rpmBinsBoost, rpm
-      yBins = tpsBinsBoost, throttle
+      yBins = loadBinsBoost, boostLoad
       zBins = boostTable
       gridHeight  = 3.0
       upDownLabel = "HIGHER", "LOWER"
@@ -4836,7 +4834,7 @@ cmdVSSratio6 =      "E\x99\x06"
    fuelLoad2    = { fuel2Algorithm == 0 ? map : fuel2Algorithm == 1 ? tps : fuel2Algorithm == 2 ? 0 : 0 }
    ignLoad2     = { spark2Algorithm == 0 ? map : spark2Algorithm == 1 ? tps : spark2Algorithm == 2 ? 0 : ignLoad }
    vvtLoad      = { (vvtLoadSource == 0) ? map : tps }
-
+   boostLoad      = { (boostLoadSource == 0) ? map : tps }
    boostTableLimit = { boostType == 0 ? 100 : 511 } ;The maximum value allowed in the boost table. 100 is used for duty cycle, 511 for kpa
 
    CLIdleDelta      = { CLIdleTarget - rpm }
